@@ -1,6 +1,7 @@
 v0.3.3~dev
 - Fix persistent notification being too persistent
 - Add settings to select artwork types to automatically download
+- Sort and limit posters by height, not width
 
 v0.3.2 (2016-02-09)
 - better handle rapid fire library updates
